# SI_project

./: README.md
AUTH_SERVER/: .env_template  app.js  generateKeypair.js  package-lock.json  package.json  swagger.json
AUTH_SERVER/config/: passport.js
AUTH_SERVER/keys/: id_rsa_priv.pem  id_rsa_pub.pem
AUTH_SERVER/lib/: utils.js
AUTH_SERVER/models/: user.js
AUTH_SERVER/routes/: users.js
GRAPHQL_SERVER/: .env_template  azure_storage.js  db.js  package-lock.json  package.json  redis.js  server.js  utils.js
GRAPHQL_SERVER/graphql_documentation/: config.yml  index.html
GRAPHQL_SERVER/schema/: resolvers.js  type-defs.js
documentation/: README.md  choices.docx  how_to.docx  overview_of_the_system.docx  reflections_on_process.docx
email-server/: .env_template  app.js  package-lock.json  package.json  swagger.json
email-server/models/: invite.js  relationships.js  user.js
email-server/utils/: emailHandler.js  linkgeneration.js  streamHandler.js
ftp/: .env_template  ftp.js  ftp.py  package-lock.json  package.json  push_to_blob.js  pyproject.toml  swagger.json
ftp/ftproot/: products.db
rss-server-azure-function/: package-lock.json  package.json
rss-server-azure-function/rss-server-azure-trigger/: index.js
scraper/: scrape.py
sockets/: .env_template  app.js  db.js  package-lock.json  package.json  socket-io.js  wsocket.js
sockets/models/: relationships.js  user.js
updateInfo/: .env_template  app.js  package-lock.json  package.json  swagger.json
utils/: package-lock.json  package.json
webhook_azure_functions/: package-lock.json  package.json
(+6 files in other folders)
