[tool.poetry]
name = "ftp"
version = "0.1.0"
description = ""
authors = ["aleksanderminchev <83026219+aleksanderminchev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyftpdlib = "^1.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
